--- a/package.json
+++ b/package.json
@@ -20,12 +20,25 @@
   },
   "homepage": "https://github.com/bph838/gmfc-web#readme",
   "devDependencies": {
+    "@babel/core": "^7.29.0",
+    "@babel/preset-env": "^7.29.0",
+    "autoprefixer": "^10.4.27",
+    "babel-loader": "^10.0.0",
     "copy-webpack-plugin": "^13.0.1",
     "css-loader": "^7.1.4",
     "html-webpack-plugin": "^5.6.6",
+    "mini-css-extract-plugin": "^2.10.0",
+    "postcss": "^8.5.6",
+    "postcss-loader": "^8.2.1",
+    "sass": "^1.97.3",
+    "sass-loader": "^16.0.7",
     "style-loader": "^4.0.0",
+    "terser-webpack-plugin": "^5.3.16",
     "webpack": "^5.105.3",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.3"
+  },
+  "dependencies": {
+    "photoswipe": "^5.4.4"
   }
 }
