--- a/package.json
+++ b/package.json
@@ -19,26 +19,30 @@
     "url": "https://github.com/bph838/gmfc-web/issues"
   },
   "homepage": "https://github.com/bph838/gmfc-web#readme",
+  "dependencies": {
+    "jquery": "^3.7.1",
+    "photoswipe": "^5.4.4"
+  },
   "devDependencies": {
     "@babel/core": "^7.29.0",
     "@babel/preset-env": "^7.29.0",
-    "autoprefixer": "^10.4.27",
+    "autoprefixer": "^10.4.23",
     "babel-loader": "^10.0.0",
     "copy-webpack-plugin": "^13.0.1",
-    "css-loader": "^7.1.4",
-    "html-webpack-plugin": "^5.6.6",
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.5",
     "mini-css-extract-plugin": "^2.10.0",
-    "postcss": "^8.5.6",
-    "postcss-loader": "^8.2.1",
+    "postcss-loader": "^8.2.0",
+    "prerender-spa-plugin": "^3.4.0",
+    "prettier": "^3.0.0-alpha.6",
+    "puppeteer": "^1.20.0",
     "sass": "^1.97.3",
-    "sass-loader": "^16.0.7",
+    "sass-loader": "^16.0.6",
     "style-loader": "^4.0.0",
-    "terser-webpack-plugin": "^5.3.16",
-    "webpack": "^5.105.3",
+    "terser-webpack-plugin": "5.3.16",
+    "webpack": "^5.104.1",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.3"
-  },
-  "dependencies": {
-    "photoswipe": "^5.4.4"
+    "webpack-dev-server": "^5.2.2",
+    "xlsx": "^0.18.5"
   }
 }
